--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,11 +13,11 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 /* Icons */
 @font-face {
 	font-family: 'icons';
-		src: url('../fonts/icons.eot');
-		src: url('../fonts/icons.eot#iefix') format('embedded-opentype'),
-		url('../fonts/icons.woff') format('woff'),
-		url('../fonts/icons.ttf') format('truetype'),
-		url('../fonts/icons.svg#icons') format('svg');
+		src: url('https://vshtml.github.io/assets/fonts/icons.eot');
+		src: url('https://vshtml.github.io/assets/fonts/icons.eot#iefix') format('embedded-opentype'),
+		url('https://vshtml.github.io/assets/fonts/icons.woff') format('woff'),
+		url('https://vshtml.github.io/assets/fonts/icons.ttf') format('truetype'),
+		url('https://vshtml.github.io/assets/fonts/icons.svg#icons') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
